Bug 77496 - 'Enter' and 'Tab' keys on Weston-keyboard does not work
Summary: 'Enter' and 'Tab' keys on Weston-keyboard does not work
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-15 19:19 UTC by Anu Reddy
Modified: 2014-04-28 19:17 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-04-15 19:19:01 UTC
Steps:
1. Launch weston
2. Execute weston-editor
3. Use weston-keyboard and enter some text into Entry field
4. Press 'Tab' on weston-keyboard
5. Press 'Enter' on weston-keyboard. 
6. Notice 'Tab' and 'Enter' does not work.


Software stack:
wayland (HEAD) 1.4.91-0-g5e2cfd2
drm (HEAD) libdrm-2.4.52-0-g46d451c
mesa (HEAD) mesa-10.1-0-g4a86465
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.2-0-g121e70d
cairo (HEAD) heads/1.12-0-g59e2a93
libinput (HEAD) remotes/origin/HEAD-0-gc5c503c
weston (HEAD) 1.4.91-0-g79d5a6e
Comment 1 Kristian Høgsberg 2014-04-21 22:38:04 UTC
commit 8986c18f698c128089d5e2961dd650bb9bf8a3dc
Author: Manuel Bachmann <manuel.bachmann@open.eurogiciel.org>
Date:   Fri Apr 18 12:50:14 2014 +0200

    editor: react on Enter, Tab, and Up-Down arrow keys
    
    The editor will now insert new lines and tabulations when
    pressing the corresponding keys on the virtual keyboard.
    
    The Up and Down arrows can be used to navigate through
    lines.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=77496
    
    Signed-off-by: Manuel Bachmann <manuel.bachmann@open.eurogiciel.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.